environments/sandbox-narrative/kubernetes/oauth2_proxy/testoauth/testoauth-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testoauth
  labels:
    k8s-app: testoauth
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: testoauth
    spec:
      containers:
      - name: testoauth
        image: nginx:stable
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 20Mi
        volumeMounts:
          - name: testoauth-index
            mountPath: /usr/share/nginx/html
      volumes:
        - name: testoauth-index
          configMap:
            name: testoauth-index
