environments/sandbox-narrative/kubernetes/oauth2_proxy/testoauth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testoauth
  namespace: default
  labels:
    k8s-app: testoauth
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: testoauth
